--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Configure DVC remote
         run: |
-          echo "$GOOGLE_DRIVE_CREDENTIALS_DATA" > credentials.json
+          # echo "$GOOGLE_DRIVE_CREDENTIALS_DATA" > credentials.json
+          dvc remote modify storage --local auth basic
           dvc remote modify storage gdrive_acknowledge_abuse true
           dvc remote modify storage gdrive_service_account_json_file_path credentials.json
           dvc remote modify storage url gdrive://1CUWjhnRnxFJQe1eN8FCLoyHXE4Fvd5rD
